# nixShims4Windows

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: unistd.h
include/sys/: time.h
lib/: NtDelayExecution.def  NtDelayExecution.lib
src/: time.c
